# SYCLomatic

./: .gitattributes  CONTRIBUTING.md  CONTRIBUTING_SYCLomatic.md  GetStartedGuide.md  GetStartedGuide_SYCLomatic.md  README.md  README_SYCLomatic.md  a.out  a.txt  genindex.html  index.html  legal_information.md  notices-and-disclaimers.html  objects.inv  requirements.txt  search.html  searchindex.js  third-party-program.txt
clang/lib/C2S/: APINames.inc  APINamesCUBLAS.inc  APINamesCUFFT.inc  APINamesComplex.inc  APINamesDriver.inc  APINamesMapThrust.inc  APINamesMath.inc  APINamesMathList.inc  APINamesMemory.inc  APINamesTexture.inc  APINamesThrust.inc  APINamesWarp.inc  APINames_cuBLAS.inc  APINames_thrust.inc  ASTTraversal.cpp  ASTTraversal.h  AnalysisInfo.cpp  AnalysisInfo.h  BLASAPIMigration.cpp  BLASAPIMigration.h  BarrierFenceSpaceAnalyzer.cpp  BarrierFenceSpaceAnalyzer.h  C2S.cpp  CMakeLists.txt  CallExprRewriter.cpp  CallExprRewriter.h  Checkpoint.h  Config.h  CustomHelperFiles.cpp  CustomHelperFiles.h  Diagnostics.cpp  Diagnostics.h  Diagnostics.inc  Error.cpp  Error.h  ExprAnalysis.cpp  ExprAnalysis.h  ExtReplacements.cpp  ExtReplacements.h  ExternalReplacement.cpp  (+34 more)
clang/lib/C2S/GaHelper/: active_user_detector.h  filelock.h  gahelper_impl.cpp  network_util.h
clang/lib/C2S/cmake/: libC2S.cmake
clang/lib/C2S/docs/: CMakeLists.txt  doxygen.cfg.in
clang/lib/DPCT/: .clang-format  APINames.inc  APINamesAtomic.inc  APINamesCUB.inc  APINamesCUBLAS.inc  APINamesCUDNN.inc  APINamesCUFFT.inc  APINamesCURAND.inc  APINamesCUSOLVER.inc  APINamesCUSPARSE.inc  APINamesComplex.inc  APINamesCooperativeGroups.inc  APINamesDriver.inc  APINamesErrorHandling.inc  APINamesEvent.inc  APINamesGraph.inc  APINamesGraphicsInterop.inc  APINamesLIBCU.inc  APINamesMapThrust.inc  APINamesMath.inc  APINamesMathList.inc  APINamesMathRewrite.inc  APINamesMathRewriter.inc  APINamesMemberExpr.inc  APINamesMemory.inc  APINamesMisc.inc  APINamesNccl.inc  APINamesStream.inc  APINamesTemplateType.inc  APINamesTexture.inc  APINamesThrust.inc  APINamesWarp.inc  APINamesWmma.inc  APINames_ASM.inc  APINames_CUB.inc  APINames_Graph.inc  APINames_NCCL.inc  APINames_NVML.inc  APINames_NVTX.inc  APINames_PyTorch.inc  (+201 more)
clang/lib/DPCT/API/: APINames_NCCL.inc  APINames_NVML.inc  APINames_cuBLAS.inc  APINames_template.inc  TypeNames.inc
clang/lib/DPCT/APIMapping/: GenerateRegister.cmake  GenerateRegisterBuffer.cmake  GenerateRegisterFast.cmake  GenerateRegisterSlow.cmake  QueryAPIMapping.cpp  QueryAPIMapping.h  QueryAPIMappingFast.cpp  QueryAPIMappingSlow.cpp
clang/lib/DPCT/ApiMapping/: ApiMapping.inc  runtime-api.inc
clang/lib/DPCT/Asm/: AsmIdentifierTable.cpp  AsmIdentifierTable.h  AsmLexer.cpp  AsmLexer.h  AsmNodes.cpp  AsmNodes.def  AsmNodes.h  AsmParser.cpp  AsmParser.h  AsmToken.h  AsmTokenKinds.cpp  AsmTokenKinds.def  AsmTokenKinds.h  InlineAsm.cpp  InlineAsm.h
clang/lib/DPCT/ConfusableTable/: build_confusable_table.cpp
clang/lib/DPCT/GaHelper/: GaHelper.h  active_user_detector.cpp  active_user_detector.h  filelock.cpp  filelock.h  filesystem_util.cpp  filesystem_util.h  gahelper_impl.cpp  gahelper_impl.h  http_connector.cpp  http_connector.h  network_util.cpp  network_util.h  os_specific.cpp  os_specific.h  uuid.cpp  uuid.h
clang/lib/DPCT/Rewriters/: CallExprRewriter.cpp  CallExprRewriter.h  CallExprRewriterCommon.h  MemberExprRewriter.cpp  RewriterSYCLcompat.cpp  TypeLocRewriters.cpp  TypeLocRewriters.h
clang/lib/DPCT/cmake/: libDPCT.cmake
clang/lib/DPCT/docs/: CMakeLists.txt  doxygen-mainpage.dox  doxygen.cfg.in
clang/lib/DPCT/libcurl/: readme.md  version.txt
clang/runtime/c2s-rt/: CMakeLists.txt
clang/runtime/c2s-rt/include/: HelperFileAndFeatureNames.inc  README.md  atomic.hpp.inc  blas_utils.hpp.inc  c2s.hpp.inc  device.hpp.inc  dpl_utils.hpp.inc  image.hpp.inc  kernel.hpp.inc  lib_common_utils.hpp.inc  memory.hpp.inc  processFiles.py  rng_utils.hpp.inc  util.hpp.inc
clang/runtime/dpct-rt/: CMakeLists.txt  processFiles.py
clang/runtime/dpct-rt/include/: HelperFileAndFeatureNames.inc  HelperFileNames.inc  README.md  atomic.hpp  atomic.hpp.inc  atomic_helper.hpp.inc  atomic_ref_ext.hpp.inc  atomic_utils.hpp.inc  blas_utils.hpp  blas_utils.hpp.inc  ccl_utils.hpp  ccl_utils.hpp.inc  device.hpp  device.hpp.inc  dnnl_utils.hpp  dnnl_utils.hpp.inc  dpct.hpp  dpct.hpp.inc  dpct_atomic.hpp  dpct_blas.hpp  dpct_device.hpp  dpct_dpstd_utils.hpp  dpct_image.hpp  dpct_kernel.hpp  dpct_memory.hpp  dpct_thrust.hpp  dpct_util.hpp  dpl_utils.hpp  dpl_utils.hpp.inc  dpstd_utils.hpp  fft_utils.hpp  fft_utils.hpp.inc  image.hpp  image.hpp.inc  kernel.hpp  kernel.hpp.inc  lapack_utils.hpp  lapack_utils.hpp.inc  (+15 more)
clang/runtime/syclct-rt/: CMakeLists.txt
clang/tools/c2s/: C2S.cpp  CMakeLists.txt  dpct  vars.bat  vars.sh
clang/tools/cu2sycl/: ASTTraversal.cpp  ASTTraversal.h  CMakeLists.txt  Cu2Sycl.cpp  CudaToSycl.cpp  MapNames.cpp  SaveNewFiles.cpp  SourceTransformation.cpp  SourceTransformation.h  TextModification.cpp  TextModification.h  Translation.cpp  Translation.h  Utility.cpp  Utility.h  ValidateArguments.cpp  ValidateArguments.h
clang/tools/cuda-to-sycl/: Analysis.cpp  Analysis.h  CMakeLists.txt  Refinement.cpp  Refinement.h  SourceTransformation.cpp  Translation.cpp
clang/tools/dpct/: CMakeLists.txt  DPCT.cpp  DPCT_API_COVERAGE.md  README.md  api_migration_status_arrays.py  api_migration_status_arrays_parser.py  bash-autocomplete.sh  dpcpp-ct  dpct  generate_api_migration_status.py  run_dpct_lit_test.sh  run_dpct_pre-checkin_test_in-ics-env.sh  setvars.sh  sycl-mapping-APIs-scanner.md  sycl-mapping-APIs-scanner.py  sys_check.bat  sys_check.sh  update_API_coverage_status.py  vars.bat  vars.bat_2023_style  vars.bat_SYCLomatic  vars.sh  vars.sh_2023_style  vars.sh_SYCLomatic
clang/tools/scan-build-py/: CMakeLists.txt
clang/tools/syclct/: CMakeLists.txt  DPCT.cpp  SyclCT.cpp  run_dpct_lit_test.sh  run_syclct_pre-checkin_test_in-ics-env.sh  startup.bat  startup.sh  sys_check.bat  sys_check.sh  vars.bat  vars.sh
docs/: .gitignore  (+4 more)
llvm/lib/SYCLLowerIR/: CMakeLists.txt  LowerESIMD.cpp
(+5804 files in other folders)
